zerocopy-derive/tests/ui-msrv/union_into_bytes_cfg/union_into_bytes_cfg.msrv.stderr
error: extern location for zerocopy_derive does not exist: target/ui-test-derive-build/debug/deps/libzerocopy_derive-7ad9d882ad449fb9.so
  --> $DIR/union_into_bytes_cfg/union_into_bytes_cfg.rs:16:1
   |
16 | extern crate zerocopy_derive;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

